Bug 403129 - Speed Dial does not load
Summary: Speed Dial does not load
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-12 09:01 UTC by Juraj
Modified: 2019-01-24 09:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2019-01-12 09:01:51 UTC
SUMMARY
Hello, I have speeddial set as Homepage and it should load always when new tab is opened. But from time to time new tab is opened, falkon:speeddial is displayed as its title but I can see only white hell.

STEPS TO REPRODUCE
1. Open latest Falkon (git version)
2. It happens randomly when new tab is opened, good way to reproduce it is to try open new tabs in rapid succession

OBSERVED RESULT
Not always but a lot of times speeddial is not loaded.

The message in terminal:
> QIODevice::read (QBuffer): device not open

In Console of the failed Speed Dial:
> VM18 userscript:_falkon_speeddial:409 Uncaught TypeError: Cannot read property 'dataset' of null
>    at HTMLDocument.init (VM18 userscript:_falkon_speeddial:409)
>    at registerExternal (VM17 userscript:_falkon_webchannel:428)
>    at VM17 userscript:_falkon_webchannel:428
>    at Object.<anonymous> (VM17 userscript:_falkon_webchannel:169)
>    at QWebChannel.handleResponse (VM17 userscript:_falkon_webchannel:137)
>    at Object.QWebChannel.transport.onmessage (VM17 >userscript:_falkon_webchannel:86)

EXPECTED RESULT
Speed Dial should always load.

SOFTWARE/OS VERSIONS
Operating System: Artix (Arch based)
KDE Plasma Version: 5.14.4
Qt Version: 5.12.0
KDE Frameworks Version: 5.53.0
Kernel Version: 4.19.13-1-lts
OS Type: 64-bit

ADDITIONAL INFORMATION
I did not experience this with Falkon 3.0.1 installed from Arch repositories.
In my opinion it started when I recently compiled git version to get rid of other errors.
Comment 1 David Rosca 2019-01-23 15:38:21 UTC
Can you please try with git master?
Comment 2 Juraj 2019-01-23 15:48:31 UTC
I experience this with version compiled from source (falkon-git from AUR).
I compiled it 11 or so days ago (pacman says 2019/01/12).
Did some miracle happen ?

SOFTWARE/OS VERSIONS
Application version 3.0.99 (4c9d5036)
QtWebEngine version 5.12.0
Comment 3 David Rosca 2019-01-23 16:42:00 UTC
Git commit 0389da311c2fac00b89bb7241345eec2bb42b615 by David Rosca.
Committed on 23/01/2019 at 16:41.
Pushed by drosca into branch 'master'.

Fix leaking QWebEngineUrlRequestJob reply
FIXED-IN: 3.1.0

M  +1    -1    src/lib/network/schemehandlers/extensionschemehandler.cpp
M  +1    -1    src/lib/network/schemehandlers/falkonschemehandler.cpp
M  +1    -0    src/plugins/KDEFrameworksIntegration/kioschemehandler.cpp

https://commits.kde.org/falkon/0389da311c2fac00b89bb7241345eec2bb42b615
Comment 4 David Rosca 2019-01-23 17:39:40 UTC
Wrong commit
Comment 5 David Rosca 2019-01-24 09:11:19 UTC
Git commit 675f148598a9efab203110f9dd225606a3fbccbd by David Rosca.
Committed on 24/01/2019 at 09:11.
Pushed by drosca into branch 'master'.

FalkonSchemeHandler: Load contents immediately
FIXED-IN: 3.1.0

M  +1    -3    src/lib/network/schemehandlers/falkonschemehandler.cpp

https://commits.kde.org/falkon/675f148598a9efab203110f9dd225606a3fbccbd